--- a/pages/index.html
+++ b/pages/index.html
@@ -55,7 +55,7 @@ community:
       text: Report bugs, request features, discuss issues, and more.
       class: github
     - title: Turing.jl Discuss
-      url: https://discourse.julialang.org/c/domain/stats
+      url: https://discourse.julialang.org/c/domain/probprog
       text: Browse and join discussions on Turing.
       class: turing-resource
     - title: Slack
