--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -121,7 +121,7 @@ support:
     <div class="row">
       <div class="col-sm-6 col-md-8">
         <div class="archive__item-body  text-right">
-          <h2 class="archive__item-title" id="a-quick-example">A Quick Example</h2>
+          <h2 class="archive__item-title">A Quick Example</h2>
           <div class="archive__item-excerpt">
             {{ page.code-sample.excerpt | markdownify }}
           </div>
