--- a/pages/index.html
+++ b/pages/index.html
@@ -116,12 +116,12 @@ support:
 </div>
 
 <!-- A Quick Example -->
-<div class="swimlane">
+<div class="swimlane" id="a-quick-example">
   <div class="container">
     <div class="row">
       <div class="col-sm-6 col-md-8">
         <div class="archive__item-body  text-right">
-          <h2 class="archive__item-title" id="a-quick-example">A Quick Example</h2>
+          <h2 class="archive__item-title" >A Quick Example</h2>
           <div class="archive__item-excerpt">
             {{ page.code-sample.excerpt | markdownify }}
           </div>
